--- a/index.html
+++ b/index.html
@@ -9,7 +9,38 @@
     <link rel="stylesheet" href="responsivity.css">
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
+<a href="https://www.facebook.com/MobilnyFryzjerZgierz" class="fb-icon" target="_blank" aria-label="Facebook">
+    <i class="fab fa-facebook-f"></i>
+    <span class="fb-text">Polub nas na Facebooku</span>
+</a>
+<a href="https://www.instagram.com/twojanazwainstagrama" class="ig-icon" target="_blank" aria-label="Instagram">
+    <i class="fab fa-instagram"></i>
+    <span class="ig-text">Obserwuj nas na Instagramie</span>
+</a>
+
+<script src="//code.tidio.co/aokorza8k941czicrdrohe3x1jrltt5d.js" async></script>
+
 <body>
+
+    <div id="opinieModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Ostatnie 3 Opinie klientów</h2>
+            <div class="opinia">
+                <p>"Świetna obsługa i genialne cięcie! Polecam każdemu!"</p>
+                <span>– Ania z Łodzi</span>
+            </div>
+            <div class="opinia">
+                <p>"W końcu fryzjer, który rozumie moje włosy 😍"</p>
+                <span>– Bartek</span>
+            </div>
+            <div class="opinia">
+                <p>"Szybko, profesjonalnie i z uśmiechem. 10/10."</p>
+                <span>– Kasia</span>
+            </div>
+        </div>
+    </div>
+
     <button class="theme-switcher" id="themeSwitcher">
         <i class="fas fa-moon"></i>
         <span>Dark Mode</span>
